# imdb-rag

./: .env.example  .gitignore  README.md  config.py  embed_and_store.py  main.py  preprocess_imdb.py  pyproject.toml  rag_pipeline.py
