[project]
name = "ai-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langchain-pinecone>=0.2.5",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "pinecone>=6.0.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sentence-transformers>=4.1.0",
]
